# DrkCraft

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  README.txt  directory.md  results.txt
lib/: CMakeLists.txt  LICENSE.toml  LICENSE.txt  LICENSE.yaml
lib/alhelpers/: CMakeLists.txt  README.md
lib/alhelpers/src/: alhelpers.c
lib/backward/: CMakeLists.txt
lib/glad/: CMakeLists.txt  README.md
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt  README.md  drkcraft_imconfig.h
lib/imgui/imgui_impl/: imconfig.h  imgui_impl.h  imgui_impl_opengl3.cpp
lib/minimp3/: CMakeLists.txt  minimp3_impl.cpp
lib/stb/: CMakeLists.txt  stb_rect_pack_impl.cpp
lib/stb_image/: CMakeLists.txt
lib/tinyobjloader/: CMakeLists.txt  tiny_obj_loader_impl.cpp
src/: CMakeLists.txt  main.cpp
src/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Event.cpp  Event.hpp  EventGenerator.cpp  EventGenerator.hpp  EventInfo.hpp  EventTypes.hpp  Events.cpp  Events.hpp  ImGuiController.cpp  ImGuiController.hpp  ImGuiLayer.hpp  ImGuiManager.cpp  ImGuiManager.hpp  ImGuiTools.cpp  ImGuiTools.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  LoadingScreen.cpp  LoadingScreen.hpp  MainMenu.cpp  MainMenu.hpp  Monitor.cpp  Monitor.hpp  MouseCodes.hpp  SettingsMenu.cpp  SettingsMenu.hpp  Timestep.cpp  Timestep.hpp  Window.cpp  Window.hpp  main.cpp
src/Application/Layers/: LoadingScreen.cpp  LoadingScreen.hpp  MainMenu.cpp  MainMenu.hpp  SettingsMenu.cpp  SettingsMenu.hpp
src/Application/Linux/: Window.cpp
src/Application/Windows/: Window.cpp
src/Argv/: Argv.hpp
src/Audio/: AlObject.cpp  AlObject.hpp  AlTools.cpp  AlTools.hpp  Audio.cpp  Audio.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioSource.cpp  AudioSource.hpp  CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.hpp  Spatial.hpp
src/Audio/detail/: AlObject.hpp  AlTools.cpp  AlTools.hpp  AudioEngine.cpp  AudioEngine.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Decoder.cpp  Decoder.hpp  Util.cpp  Util.hpp
src/Core/: Assert.cpp  Assert.hpp  AssetManager.hpp  Assets.hpp  Base.hpp  Bind.hpp  Build.hpp  BuildConfig.hpp  BuildSettings.hpp  ByteBuffer.hpp  CMakeLists.txt  Debug.cpp  Debug.hpp  FrameCounter.cpp  FrameCounter.hpp  KeyCodes.hpp  Log.cpp  Log.hpp  Macro.hpp  Math.cpp  Math.hpp  MouseCodes.hpp  Optional.hpp  Profiler.cpp  Profiler.hpp  Result.hpp  RunSettings.cpp  RunSettings.hpp  Settings.cpp  Settings.hpp  SmartPointer.hpp  Time.cpp  Time.hpp  Timer.cpp  Timer.hpp  Timestep.cpp  Timestep.hpp  Type.hpp  Util.cpp  Util.hpp  (+2 more)
src/Core/Debug/: Assert.cpp  Assert.hpp  CMakeLists.txt  Debug.hpp  Log.cpp  Log.hpp  Profiler.cpp  Profiler.hpp  Stacktrace.cpp  Stacktrace.hpp
src/Core/Type/: Byte.hpp  None.hpp  Optional.hpp  SmartPointer.hpp
src/DrkCraft/: CMakeLists.txt  DrkCraft.cpp  DrkCraft.hpp  Main.cpp
src/DrkCraft/Application/: Application.cpp  Application.hpp  Event.hpp  EventGenerator.hpp  Events.hpp  ImGuiController.cpp  ImGuiController.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
src/DrkCraft/Audio/: Audio.cpp  Audio.hpp  AudioSource.cpp  AudioSource.hpp  CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.hpp  iPod.cpp  iPod.hpp
src/DrkCraft/Core/: Base.hpp  Bind.hpp  Build.cpp  Build.hpp  CMakeLists.txt  Macro.hpp  Result.hpp  Settings.cpp  Settings.hpp  Version.hpp
src/DrkCraft/Disk/: CMakeLists.txt  File.hpp  Font.hpp  Image.cpp  Image.hpp  Json.cpp  Json.hpp  Obj.hpp  Yaml.cpp  Yaml.hpp
src/DrkCraft/Game/: CMakeLists.txt  Game.cpp  Game.hpp  GameEvent.hpp  GameEvents.hpp  GameSystem.cpp  GameSystem.hpp  Player.cpp  Player.hpp  Sky.cpp
src/Engine/: AssetManager.cpp  Block.hpp  CMakeLists.txt  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  Noise.cpp  Noise.hpp  Scene.cpp  Scene.hpp  Timestep.cpp  Timestep.hpp  World.cpp  World.hpp  WorldGenerator.cpp  WorldGenerator.hpp
src/Game/: Block.cpp  Block.hpp  CMakeLists.txt  Chunk.hpp  ChunkManager.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  Components.hpp  Console.cpp  Console.hpp  DebugLayer.cpp  DebugLayer.hpp  DebugOverlay.cpp  DebugOverlay.hpp  Entity.hpp  Game.cpp  Game.hpp  GameEvent.cpp  GameEvent.hpp  GameEventTypes.hpp  GameEvents.hpp  GameSystem.cpp  GameSystem.hpp  Hud.cpp  Hud.hpp  HudLayer.cpp  HudLayer.hpp  PauseMenu.cpp  PauseMenu.hpp  Player.cpp  Player.hpp  Save.cpp  Save.hpp  SaveLoader.cpp  SaveLoader.hpp  SavedGameLoader.cpp  SavedGameLoader.hpp  SavedWorldLoader.cpp  SavedWorldLoader.hpp  Sky.cpp  (+9 more)
src/Graphics/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CubeRenderer.cpp  CubeRenderer.hpp  GlBuffer.cpp  GlBuffer.hpp  GlObject.cpp  GlObject.hpp  IndexBuffer.cpp  IndexBuffer.hpp  LightSource.cpp  Mesh.cpp  Mesh.hpp  MeshRenderer.hpp  OpenGlContext.cpp  OpenGlContext.hpp  OpenGlObject.cpp  OpenGlObject.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Shader.cpp  Shader.hpp  Shaders.cpp  Shaders.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  Transform.cpp  Transform.hpp  Util.cpp  Util.hpp  (+4 more)
src/System/: AssetLibrary.cpp  AssetLibrary.hpp  AssetManager.cpp  AssetManager.hpp  Audio.cpp  Audio.hpp  CMakeLists.txt  Font.hpp  GlfwTools.cpp  GlfwTools.hpp  Icon.cpp  Icon.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Lock.hpp  Monitor.cpp  Monitor.hpp  MouseCodes.hpp  Obj.cpp  Obj.hpp  Thread.hpp  Window.cpp  Window.hpp
src/Util/: ByteBuffer.hpp  CMakeLists.txt  File.cpp  File.hpp  Fn.hpp  Font.cpp  Font.hpp  Icon.cpp  Icon.hpp  ImGui.cpp  ImGui.hpp  Image.cpp  Image.hpp  Json.cpp  Json.hpp  Math.hpp  Noise.cpp  Noise.hpp  Obj.cpp  Obj.hpp  Overload.hpp  Overloaded.hpp  PeriodicUpdate.hpp  Pid.hpp  Random.hpp  String.cpp  String.hpp  Time.cpp  Time.hpp  Timestep.hpp  Yaml.cpp  Yaml.hpp
src/lib/: fs.hpp  smart_pointer.hpp  string.hpp  string_view.hpp  type.hpp
src/lib/glm/: mat2.hpp  (+7 more)
tools/std_usage/: .gitignore  README.md  setup.cfg  test_file.cpp
(+353 files in other folders)
