[metadata]
name = std_usage
version = 1.2
author = Derek Henderson
author_email = derekhenderson818@gmail.com
description = Analyzes standard library usage in C++ source code
url = https://github.com/D3r3k23/DrkCraft/tree/master/tools/setup.cfg
license = MIT License
platform = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = cpp, c++

[options]
packages = std_usage
python_requires = >=3.10
